[package]
name = "contree"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/harmony-labs/contree-cli"
homepage = "https://github.com/harmony-labs/contree-cli"
documentation = "https://docs.rs/contree"
keywords = ["cli", "context", "rust", "project", "tool"]
authors = ["@mateodelnorte"]

[dependencies]
anyhow = "1.0"          # Error handling
regex = "1.10"          # For parsing error messages
walkdir = "2.5"         # For directory traversal
ignore = "0.4"          # For respecting .gitignore
clap = { version = "4.5", features = ["derive"] } # CLI argument parsing
atty = "0.2.14"
